--- a/css/main.css
+++ b/css/main.css
@@ -11,13 +11,12 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
     min-height: 100vh;
 }
 
 header {
     width: 100%;
-    padding: 20px;
+    padding: 1rem;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -25,19 +24,20 @@ header {
 }
 
 .logo {
-    font-size: 24px;
+    font-size: 1.5rem;
     font-weight: bold;
 }
 
 .menu {
     display: flex;
-    gap: 20px;
+    gap: 1rem;
 }
 
 .menu-item {
     display: flex;
     align-items: center;
-    gap: 5px;
+    gap: .4rem;
+    font-size: .7rem;
 }
 
 .icon {
@@ -47,34 +47,43 @@ header {
 
 main {
     text-align: center;
+    height: 80vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
+/* Message */
 .center-message {
-    background-color: #333;
     padding: 20px;
-    margin-bottom: 40px;
+    margin: 0 auto;
     border-radius: 8px;
-    width: 60%;
+    width: 40%;
     max-width: 600px;
-}
+    font-size: .8rem;
+    -webkit-border-radius: 8px;
+    -moz-border-radius: 8px;
+    -ms-border-radius: 8px;
+    -o-border-radius: 8px;
+    width: 70%;
 
-.center-message h3 {
-    font-size: 24px;
-    color: #fff;
-    margin-bottom: 10px;
 }
 
 .center-message p {
-    color: #ccc;
-    margin: 5px 0;
+    color: #fff;
+    margin: .4rem 0;
 }
 
+/* ICONS */
 .icons {
     display: flex;
     justify-content: center;
-    gap: 40px;
-    flex-wrap: wrap;
-    margin: 20px 0;
+    gap: 1rem;
+    flex-wrap: no-wrap;
+    margin: 1.5rem auto;
+    width: 80%;
+    font-size: .6rem;
 }
 
 .icon-item {
@@ -82,10 +91,12 @@ main {
     flex-direction: column;
     align-items: center;
     color: #ff5f00;
+    width: 8.5rem;
+
 }
 
 .icon-item .icon {
-    font-size: 50px;
+    font-size: 2.2rem;
 }
 
 .icon-item span {
@@ -95,5 +106,9 @@ main {
 
 footer {
     color: #777;
-    margin-top: 40px;
+
+}
+
+footer p{
+    font-size: .7rem;
 }
